<resources>
    <string name="app_name">小慕餐馆</string>
    <string name="skip">跳过</string>
    <string name="imooc_restaurant">小 慕 餐 馆</string>
    <string name="username_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="login">登 录</string>
    <string name="phoneNumber_register">手机注册</string>
    <string name="register_hint">请输入用户名</string>
    <string name="repassword_hint">重复输入密码</string>
    <string name="submit">提 交</string>
    <string name="my_order">我的订单</string>
    <string name="go_order">点餐</string>
    <string name="count0">数量:0</string>
    <string name="pay0yuan">0元 立即支付</string>
</resources>
